[tool.poetry]
name = "pychaster"
version = "0.1.1"
description = "Python interface to the Chaster API"
authors = ["crispy <crispy@mibsl.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.7"
requests-oauthlib = "^1.3.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
black = "^21.12b0"
mypy = "^0.930"
types-requests = "^2.26.3"
types-python-dateutil = "^2.8.4"
pytest = "^6.2.5"
responses = "^0.17.0"
ipython = "<8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
